--- a/static/index.html
+++ b/static/index.html
@@ -540,17 +540,26 @@
     <!-- Menu -->
     <div id="menu-scrim" class="hidden"></div>
     <nav id="main-menu" class="hidden">
-      <img id="menu-wordmark" alt="Mozilla IoT" src="/optimized-images/wordmark.svg" />
+      //商标信息换成上海真灵通信科技有限公司
+      <!-- <img id="menu-wordmark" alt="Mozilla IoT" src="/optimized-images/wordmark.svg" /> -->
+      <img id="menu-wordmark" alt="Mozilla IoT" src="/optimized-images/myWordmark.svg" />
       <ul>
-        <li><a id="assistant-menu-item" href="/assistant" class="hidden" >Assistant</a></li>
-        <li><a id="things-menu-item" href="/things" class="selected">Things</a></li>
-        <li><a id="rules-menu-item" href="/rules">Rules</a></li>
-        <li><a id="logs-menu-item" href="/logs">Logs</a></li>
-        <li><a id="floorplan-menu-item" href="/floorplan">Floorplan</a></li>
-        <li><a id="settings-menu-item" href="/settings">Settings</a></li>
+        <!-- <li><a id="assistant-menu-item" href="/assistant" class="hidden" >Assistant</a></li> -->
+        <li><a id="assistant-menu-item" href="/assistant" class="hidden" >助手</a></li>
+        <!-- <li><a id="things-menu-item" href="/things" class="selected">Things</a></li> -->
+        <li><a id="things-menu-item" href="/things" class="selected">设备</a></li>
+        <!-- <li><a id="rules-menu-item" href="/rules">Rules</a></li> -->
+        <li><a id="rules-menu-item" href="/rules">规则</a></li>
+        <!-- <li><a id="logs-menu-item" href="/logs">Logs</a></li> -->
+        <li><a id="logs-menu-item" href="/logs">日志</a></li>
+        <!-- <li><a id="floorplan-menu-item" href="/floorplan">Floorplan</a></li> -->
+        <li><a id="floorplan-menu-item" href="/floorplan">布局图</a></li>
+        <!-- <li><a id="settings-menu-item" href="/settings">Settings</a></li> -->
+        <li><a id="settings-menu-item" href="/settings">设置</a></li>
         <li>
           <form id="logout" class="log-out-form">
-            <button type="submit" class="log-out-button text-button">Log out</button>
+            <!-- <button type="submit" class="log-out-button text-button">Log out</button> -->
+            <button type="submit" class="log-out-button text-button">注销</button>
           </form>
         </li>
       </ul>
